# linear-algebra

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ci  README.md  main.c
.github/workflows/: ci.yaml
cmake/: fetch_raylib.cmake
include/: close_icon.h  grid.h  jetbrains_mono.h  matrix2.h  moon.h  quad.h  raylib_ext.h  settings_icon.h  state.h  sun.h
src/: grid.c  matrix2.c  quad.c  raylib_ext.c  state.c
web/: go.mod  main.go
web/resources/: index.html
